syntax = "proto3";


package proto;

option java_package = "proto";
option java_outer_classname = "HeartbeatPB";
option java_multiple_files = true;

service HealthChecker {
    rpc Ping (stream PingRequest) returns (stream PingResponse) {
    };
    rpc SimplePing(PingRequest) returns (PingResponse){}
}
message PingRequest {
    string endpointId = 1; // endpoint id;
    string signature = 2;
}
message PingResponse {
    string signature = 1;
}

